fix(waybar): Formatting fixes

--- a/.config/waybar/style.css
+++ b/.config/waybar/style.css
@@ -46,7 +46,7 @@
   border: 0;
   padding: 0 0;
   margin: -4;
-  font-family: "JetbrainsMono Nerd Font";
+  font-family: "Atkinson Hyperlegible Nerd Font";
   font-size: 12px;
   /* font-weight: bold; */
   /* padding-bottom:4px;
